--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -3,5 +3,40 @@
     "Logout" : "Выход",
     "Choose your language": "Выберите язык",
     "English": "Английский",
-    "Russian": "Русский"
+    "Russian": "Русский",
+    "Hello" : "Привет",
+    "Facebook Links" : "Ссылки Facebook",
+    "Users" : "Пользователи",
+    "Add Link" : "Добавить ссылку",
+    "Links To" : "Ссылается на",
+    "Link Name" : "Имя ссылки",
+    "FB Link" : "Ссылка для вставки в Facebook",
+    "Header" : "Подпись",
+    "Picture" : "Картинка",
+    "noname" : "без имени",
+    "picture" : "картинка",
+    "no picture" : "нет картинки",
+    "edit" : "ред.",
+    "You will be able to add picture after adding link" : "Вы сможете добавить картинку для ссылки после добавления ссылки",
+    "Add" : "Добавить",
+    "Back to list" : "Назад к списку",
+    "Update": "Обновить",
+    "Delete" : "Удалить",
+    "Maximum file size - 1mb" : "максимальный размер файла - 1 Мегабайт",
+    "Upload" : "Загрузить картинку",
+    "User Links" : "FB ссылки",
+    "Create Link" : "Создать ссылку",
+    "Link not found" : "Ссылка не найдена",
+    "Edit Picture" : "Редактирование картинки",
+    "This is not a picture. Forbidden file type" : "Недопустимый формат картинки",
+    "Allowed extension are" : "Разрешенные форматы",
+    "The size of the picture is more than": "Размер картинки более чем",
+    "Error": "Ошибка",
+    "Edit" : "Изменить",
+    "Edit Link" : "Изменить ссылку",
+    "The name of the link" : "Название ссылки",
+    "The link which will be openned when user clicks on the picture" : "Ссылка которая откроется когда пользователь кликнет по картинке",
+    "Generated link to copy and paste into Facebook" : "Сгенерированная ссылка для вставки в Facebook. Для этого кликните по ней правой кнопкой мыши и выберите Копировать адрес ссылки",
+    "The header which will be below the picture" : "Подпись которая будет в посте Фейсбука под картинкой"
+
 }
