--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -38,7 +38,7 @@
     "The link which will be openned when user clicks on the picture" : "Ссылка которая откроется когда пользователь кликнет по картинке",
     "Generated link to copy and paste into Facebook" : "Сгенерированная ссылка для вставки в Facebook. Для этого кликните по ней правой кнопкой мыши и выберите Копировать адрес ссылки",
     "The header which will be below the picture" : "Подпись которая будет в посте Фейсбука под картинкой",
-    "How many times people clicked on this link" : "Сколько раз люди перешли по єтой ссылке",
+    "How many times people clicked on this link" : "Сколько раз люди перешли по этой ссылке",
     "Hits" : "Переходов"
 
 }
